# ghttpping-tauri

./: .editorconfig  .gitattributes  .gitignore  README.md  appxmanifest.xml  build.ps1  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: project.instructions.md
.github/workflows/: build-windows-app.yaml
src/: main.ts  style.css
src-tauri/: Cargo.toml  build.rs  capabilities.json  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  lib.rs.bak  main.rs
