[package]
name = "ghttpping-tauri"
version = "0.1.0"
description = "HTTP/HTTPS疎通確認および遅延測定GUIアプリ"
authors = ["MINETA \"m10i\" Hiroki <h-mineta@0nyx.net>"]
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
x509-parser = "0.16"


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
